--- a/package.json
+++ b/package.json
@@ -5,33 +5,39 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "vitest",
+    "test": "jest --watchAll --coverage --detectOpenHandles --forceExit",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "pre-commit": "husky install"
   },
   "dependencies": {
+    "@types/lint-staged": "^13.2.0",
     "antd": "^5.9.2",
+    "html5-qrcode": "^2.3.8",
     "i18next": "^23.5.1",
+    "lint-staged": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "react-router-dom": "^6.16.0",
+    "styled-components": "^6.0.8",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.4.3",
-    "@storybook/addon-interactions": "^7.4.3",
-    "@storybook/addon-links": "^7.4.3",
+    "@storybook/addon-essentials": "^7.4.4",
+    "@storybook/addon-interactions": "^7.4.4",
+    "@storybook/addon-links": "^7.4.4",
     "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.4.3",
-    "@storybook/react": "^7.4.3",
-    "@storybook/react-vite": "^7.4.3",
+    "@storybook/blocks": "^7.4.4",
+    "@storybook/react": "^7.4.4",
+    "@storybook/react-vite": "^7.4.4",
     "@storybook/testing-library": "^0.2.1",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
@@ -41,12 +47,23 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.14",
-    "html5-qrcode": "^2.3.8",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "jsdom": "^22.1.0",
-    "storybook": "^7.4.3",
-    "styled-components": "^6.0.8",
+    "storybook": "^7.4.4",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.5"
+    "vite": "^4.4.9"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "resolutions": {
+    "jest": "^29.7.0",
+    "ts-jest": "^29.7.0",
+    "@testing-library/dom": "^8.11.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0"
   }
 }
