--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "demo-locker-app",
+  "author": "Chazki",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "test": "jest --watchAll --coverage --detectOpenHandles --forceExit",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -13,8 +14,21 @@
     "build-storybook": "storybook build",
     "pre-commit": "husky install"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test"
+    }
+  },
+  "prettier": {
+    "bracketSpacing": true,
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "all"
+  },
   "dependencies": {
-    "@types/lint-staged": "^13.2.0",
     "antd": "^5.9.2",
     "html5-qrcode": "^2.3.8",
     "i18next": "^23.5.1",
@@ -37,6 +51,7 @@
     "@storybook/testing-library": "^0.2.1",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/lint-staged": "^13.2.0",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
@@ -60,11 +75,11 @@
     "react-dom": "^18.0.0"
   },
   "resolutions": {
-    "jest": "^29.7.0",
-    "ts-jest": "^29.7.0",
     "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0"
+    "@testing-library/user-event": "^13.5.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.7.0"
   }
 }
