--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite",
     "test": "jest --watchAll --coverage --detectOpenHandles --forceExit",
     "test-push": "jest --coverage --detectOpenHandles --forceExit",
     "build": "tsc && vite build",
@@ -30,8 +30,8 @@
     "trailingComma": "all"
   },
   "dependencies": {
+    "@yudiel/react-qr-scanner": "^1.1.10",
     "antd": "^5.9.2",
-    "html5-qrcode": "^2.3.8",
     "i18next": "^23.5.1",
     "lint-staged": "^14.0.1",
     "react": "^18.2.0",
@@ -52,8 +52,8 @@
     "@storybook/testing-library": "^0.2.1",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
-    "@types/lint-staged": "^13.2.0",
     "@types/jest": "^29.5.5",
+    "@types/lint-staged": "^13.2.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
@@ -66,6 +66,7 @@
     "eslint-plugin-storybook": "^0.6.14",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "jest-styled-components": "^7.1.1",
     "jsdom": "^22.1.0",
     "storybook": "^7.4.4",
     "typescript": "^5.2.2",
