--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@otplib/preset-browser": "^12.0.1",
     "@yudiel/react-qr-scanner": "^1.1.10",
     "antd": "^5.9.3",
+    "crypto-js": "^4.1.1",
     "i18next": "^23.5.1",
     "lint-staged": "^14.0.1",
+    "otplib": "^12.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
@@ -56,7 +59,7 @@
     "@types/jest": "^29.5.5",
     "@types/lint-staged": "^13.2.0",
     "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.7",
+    "@types/react-dom": "^18.2.8",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "@vitejs/plugin-react": "^4.1.0",
