--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "pre-commit": "husky install"
+    "pre-commit": "husky install",
+    "deploy-dist": "gh-pages -d storybook-static",
+    "deploy-storybook": "gh-pages -d storybook-static"
   },
   "husky": {
     "hooks": {
@@ -33,7 +35,7 @@
     "@ant-design/icons": "^5.2.6",
     "@otplib/preset-browser": "^12.0.1",
     "@yudiel/react-qr-scanner": "^1.1.10",
-    "antd": "^5.9.3",
+    "antd": "^5.9.4",
     "crypto-js": "^4.1.1",
     "i18next": "^23.5.1",
     "lint-staged": "^14.0.1",
@@ -68,6 +70,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.14",
+    "gh-pages": "^6.0.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-styled-components": "^7.1.1",
