--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "pre-commit": "husky install",
-    "deploy-dist": "gh-pages -d storybook-static",
+    "deploy-dist": "gh-pages -d dist",
     "deploy-storybook": "gh-pages -d storybook-static"
   },
   "husky": {
@@ -36,48 +36,51 @@
     "@otplib/preset-browser": "^12.0.1",
     "@yudiel/react-qr-scanner": "^1.1.10",
     "antd": "^5.9.4",
+    "axios": "^1.5.1",
     "crypto-js": "^4.1.1",
     "i18next": "^23.5.1",
     "lint-staged": "^14.0.1",
+    "npm": "^10.2.0",
     "otplib": "^12.0.1",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.8",
-    "yup": "^1.3.1"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.4.5",
-    "@storybook/addon-interactions": "^7.4.5",
-    "@storybook/addon-links": "^7.4.5",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
     "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.4.5",
-    "@storybook/react": "^7.4.5",
-    "@storybook/react-vite": "^7.4.5",
-    "@storybook/testing-library": "^0.2.1",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/react": "^7.4.6",
+    "@storybook/react-vite": "^7.4.6",
+    "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.1.5",
     "@types/jest": "^29.5.5",
     "@types/lint-staged": "^13.2.0",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
+    "@types/react": "^18.2.26",
+    "@types/react-dom": "^18.2.11",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "@vitejs/plugin-react": "^4.1.0",
-    "eslint": "^8.50.0",
+    "eslint": "^8.51.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "eslint-plugin-storybook": "^0.6.14",
+    "eslint-plugin-storybook": "^0.6.15",
     "gh-pages": "^6.0.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-styled-components": "^7.1.1",
     "jsdom": "^22.1.0",
-    "storybook": "^7.4.5",
+    "storybook": "^7.4.6",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9"
+    "vite": "^4.4.11"
   },
   "peerDependencies": {
     "react": "^18.0.0",
