--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://chazki.github.io/Lockers-demo/",
   "scripts": {
     "dev": "vite",
     "test": "jest --watchAll --coverage --detectOpenHandles --forceExit",
