--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build-storybook": "storybook build",
     "pre-commit": "husky install",
     "deploy-dist": "gh-pages -d dist",
-    "deploy-storybook": "gh-pages -d storybook-static"
+    "deploy-storybook": "gh-pages -d storybook-static",
+    "serve": "serve dist -s"
   },
   "husky": {
     "hooks": {
@@ -34,6 +35,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@otplib/preset-browser": "^12.0.1",
+    "@railway/cli": "^3.5.1",
     "@yudiel/react-qr-scanner": "^1.1.10",
     "antd": "^5.9.4",
     "axios": "^1.5.1",
@@ -47,6 +49,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "react-router-dom": "^6.16.0",
+    "serve": "^14.2.1",
     "styled-components": "^6.0.8",
     "yup": "^1.3.2"
   },
